tests/semantic/invalid/struct_undeclared_type.src
struct Point {
    int x;
    UnknownType y;
}
